--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   command = "npm run build"
-  publish = "/build"
-  base="/"
-
+  publish = ".next"
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
