--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@netlify/plugin-nextjs": "^4.41.1",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
@@ -22,6 +25,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.12.17",
     "next": "13.4.8",
     "postcss": "8.4.24",
